src/test/fun-test/semantic/AssignmentStrictConversion3.java.err
Semantic error: type mismatch - expected SHORT, got DOUBLE, line 5, pos 15
