src/test/fun-test/semantic/AssignmentStrictConversion3.java
class Main {
    void main() {
        double foo;
        short bar;
        bar = foo;
    }
}